<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".activity.ForgotPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_main2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_title_icon"
            app:layout_constraintBottom_toTopOf="@+id/textView5" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="411dp"
            android:layout_height="200dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/d250"
                android:layout_height="@dimen/d250"
                android:adjustViewBounds="true"
                android:src="@drawable/app_logo_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif-black"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="75sp"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:singleLine="true"
            android:text="@string/forgot_password"
            android:textColor="@color/app_bg"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/d20"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="150dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d10"
                android:gravity="start"
                android:paddingTop="@dimen/d10"
                android:singleLine="true"
                android:text="@string/hint_mobile"
                android:textColor="@color/white"
                android:textSize="13sp"
                tools:ignore="MissingPrefix" />

            <!--        android:hint="ادخل البريد الإلكتروني"-->

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input_field"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:ccpDialog_backgroundColor="@color/transparent"
                    app:ccpDialog_searchEditTextTint="@color/black"
                    app:ccpDialog_textColor="@color/black"
                    app:ccp_arrowColor="@color/transparent"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_contentColor="@color/black"
                    app:ccp_showFlag="true" />
                    <EditText
                        android:id="@+id/editTextUserName"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="@dimen/d5"
                        android:background="@drawable/bg_input_field"
                        android:hint="@string/_55xxxxxxx"
                        android:imeOptions="flagForceAscii"
                        android:inputType="phone"
                        android:minWidth="@dimen/d40"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/silver"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="MissingPrefix" />

                </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/d20"
            android:layout_weight="0.58"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1">

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="48dp"
                android:background="@drawable/bg_btn_blue"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/loginTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d10"
                android:singleLine="true"
                android:text="هل لديك حساب؟"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:visibility="gone"
                tools:ignore="MissingPrefix" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>