<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    tools:context=".activity.ChangePassword">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/d250"
            android:layout_height="@dimen/d250"
            android:adjustViewBounds="true"
            android:src="@drawable/app_logo_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-black"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="75sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/new_password"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/d20"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d10"
            android:gravity="start"
            android:paddingTop="@dimen/d10"
            android:singleLine="true"
            android:text="@string/new_password"
            android:textColor="@color/white"
            android:textSize="13sp"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/d5"
            android:background="@drawable/blue_button"
            android:inputType="textPassword"
            android:minWidth="@dimen/d40"
            android:padding="@dimen/d15"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/silver"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/d20"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d10"
            android:gravity="start"
            android:paddingTop="@dimen/d10"
            android:singleLine="true"
            android:text="@string/confirm_new_password"
            android:textColor="@color/white"
            android:textSize="13sp"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/d5"
            android:background="@drawable/blue_button"
            android:inputType="textPassword"
            android:minWidth="@dimen/d40"
            android:padding="@dimen/d15"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/silver"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="MissingPrefix" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/d20"
        android:layout_marginTop="@dimen/d20"
        android:layout_weight="0.58"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/white_button"
            android:text="@string/change_password"
            android:textColor="@color/actionbar_top_bg"
            android:textSize="17sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>